# cv_homework

./: .gitignore  README.md
1/include/: config.h  control_plane.h
17S053255-李四林-作业1/: CMakeLists.txt  run_homework.sh
17S053255-李四林-作业1/src/: algorithm.cpp  cvui_test.cpp  draw_gui.cpp  main.cpp
17S053255-李四林-作业2/: get_all_methods.py  lm.py
17S053255-李四林-作业3/: guess_num.py
3/: find_homography.py
4/part1/: CMakeLists.txt  algorithm.cpp  cali_camera.cpp  run_algorithm.sh  run_cali_camera.sh
5/2-algorithm/: algorithm.cpp
6/: filter.cpp  run_filter.sh
7/: run_skin_detect.sh
7/src/: CMakeLists.txt  main.cpp  skin_detect.cpp  skin_detect.h
李四林-17S053255-作业5/1-photometrix_stereo/: photometric_stereo.m
李四林-17S053255-作业5/2-algorithm/: CMakeLists.txt  run_algorithm.sh
李四林-17S053255-作业6/: CMakeLists.txt
